--- a/bookmarks/src/main/resources/templates/bookmarkview.html
+++ b/bookmarks/src/main/resources/templates/bookmarkview.html
@@ -6,18 +6,20 @@
 </head>
 <body>
 	<h3>Book Mark Added Successfully</h3>
-	<table>
+	<table border="1">
 		<tr>
-			<th>id</th><th>Name</th><th>URL</th><th>Category</th>
+			<th>id</th><th>Name</th><th>URL</th><th>Category</th><th>Notes</th>
 		</tr>
 		<tr>
 			<td th:text="${id}"></td>
 			<td th:text="${name}"></td>
         	<td th:text="${url}"></td>
-        	<td th:text="${category}"></td>	
+        	<td th:text="${category}"></td>
+        	<td th:text="${notes}"></td>	
 		</tr>
 	</table>
-        
-    <a href="/">Add another bookmark</a>
+    <p>    
+    	<a href="/">Add another bookmark</a>
+    </p>
 </body>
 </html>
