--- a/bookmarks/src/main/resources/templates/index.html
+++ b/bookmarks/src/main/resources/templates/index.html
@@ -5,36 +5,44 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Bookmarks Form</h1>
+	<h1>Add Bookmark</h1>
 	<form action="#" th:action="@{/addBookmark}" th:object="${bookmark}"
 		method="post">
 		<table>
 			<tr>
 				<td>Name:</td>
-				<td><input type="text" th:field="*{name}" /></td>
+				<td><input type="text" size="30" th:field="*{name}" /></td>
 				<td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name
 					Error</td>
 			</tr>
 			<tr>
 				<td>URL:</td>
-				<td><input type="text" th:field="*{url}" /></td>
+				<td><input type="text" size="30" th:field="*{url}" /></td>
 				<td th:if="${#fields.hasErrors('url')}" th:errors="*{url}">URL
 					Error</td>
 			</tr>
 			<tr>
 				<td>Category:</td>
-				<td><input type="text" th:field="*{category}" /></td>
+				<td><input type="text" size="30" th:field="*{category}" /></td>
 				<td th:if="${#fields.hasErrors('category')}" th:errors="*{category}">Category
 					Error</td>
 			</tr>
 			<tr>
+				<td>Notes:</td>
+				<td><textarea rows="5" cols="32" th:field="*{notes}"></textarea></td>
+				<td th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}">Notes
+					Error</td>
+			</tr>
+			<tr>
+				<td></td>
 				<td><button type="submit">Save</button> 
 				    <button type="reset">Reset</button></td>
 			</tr>
 		</table>
 	</form>
 	<p>
-		<a href="/getAllBookmarks">Get All Bookmarks</a>
+		<a href="/getAllBookmarks">Get All Bookmarks</a>&nbsp;
+		<a href="/searchBookmark">Search Bookmark</a>
 	</p>
 </body>
 </html>
