--- a/bookmarks/src/main/resources/templates/bookmarkview.html
+++ b/bookmarks/src/main/resources/templates/bookmarkview.html
@@ -19,7 +19,7 @@
 		</tr>
 	</table>
     <p>    
-    	<a href="/">Add another bookmark</a>
+    	<a href="/index">Add another bookmark</a>
     </p>
 </body>
 </html>
