--- a/bookmarks/src/main/resources/templates/error.html
+++ b/bookmarks/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
         <h3>Please enter the correct details</h3>
         <table>
             <tr>
-                <td><a href="/">Retry</a></td>
+                <td><a href="/index">Retry</a></td>
             </tr>
         </table>
     </body>
